Add clean target

--- a/src/hello/Makefile
+++ b/src/hello/Makefile
@@ -1,5 +1,9 @@
 all: hello
 
+.PHONY: clean
+clean:
+	rm *.o *.sfc
+
 hello: main.s
 	ca65 main.s
 	ld65 -C ../../cfg/lorom128K.cfg -o hello.sfc main.o
